<resources>
    <string name="app_name">King记账</string>
    <string name="main_add_account">记一记</string>
    <string name="main_home">账单</string>
    <string name="main_mine">我的</string>

    <!--添加记账-->
    <string name="type_cost">支出</string>
    <string name="type_income">收入</string>
    <string name="all">全部</string>

    <string name="no_action">未找到action</string>

    <string name="account_price">单价:</string>
    <string name="account_count">数量:</string>
    <string name="account_type">类别:</string>
    <string name="permission_alert">正在请求弹框权限</string>
    <string name="submit">提交</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_save">保存</string>
    <string name="add_note">添加备注</string>
    <string name="note">备注</string>
    <string name="show_money">%1$s元</string>
    <string name="account_detail">记账详情</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="delete_tip">没有什么可以删除了</string>
    <!--定位相关错误信息-->
    <string name="sns_txt_location">点击添加位置</string>
    <string name="sns_location_failed">无法定位</string>
    <string name="sns_location_loading">获取位置中</string>
    <string name="lock_forget">忘记密码</string>
    <string name="lock_input">绘制解锁图案</string>
    <string name="lock_input_2">再次绘制解锁图案</string>
    <string name="lock_input_2_error">两次密码不同，请重新绘制</string>
    <string name="lock_input_low_point">至少连接四个点</string>
    <string name="lock_save_success">密码设置成功</string>
    <string name="lock_input_3">请绘制解锁密码</string>
    <string name="lock_login">忘记密码</string>
    <string name="lock_input_error">连续5次解锁失败</string>
    <string name="lock_input_hint">5次失败后，需要重新。</string>
    <string name="lock_input_count">密码错误，还可以再输入%1$s次</string>
    <string name="lock_reset">旧的密码锁已清除，是否重新设置？</string>
    <string name="lock_reset2">5次解锁失败，旧的密码锁已清除，是否重新设置？</string>
    <string name="mine_set">记账设置</string>
    <string name="lock_set">密码锁设置</string>
    <string name="lock">密码锁</string>
    <string name="remind_account">快来记账吧！</string>
    <string name="remind_writer">记账提醒</string>
    <string name="remind_date">提醒时间</string>
    <string name="remind_date_value">19:00</string>
    <string name="repeat_cycle">重复周期</string>
    <string name="repeat_cycle_value">每天</string>

    <string name="lock_edit">更改密码锁密码</string>
    <string name="right_now_go">立即体验</string>
    <string name="title_activity_lock_password">Sign in</string>

    <string name="prompt_password">请输入预留的密码</string>
    <string name="set_prompt_password">设置预留清除密码</string>
    <string name="search">搜索</string>
    <string name="search_start_date">起始时间</string>
    <string name="search_end_date">截止时间</string>
    <string name="search_content">内容</string>
    <string name="search_content_hint">填写备注关键字</string>
    <string name="search_type">类别</string>
    <string name="search_select">查询</string>
    <string name="search_select_date_tip">请输入正确的时间段</string>
    <string name="search_result_total_money">%1$s元</string>
    <string name="add_account">添加记账</string>
    <string name="about">关于我</string>
    <string name="developer">开发者:</string>
    <string name="developer_">金鑫沂</string>
    <string name="zhidao">指导老师:</string>
    <string name="zhidao_">任两品</string>
    <string name="contact">联系邮箱:</string>
    <string name="contact_">1402450653@qq.com</string>
    <string name="version">版本号:</string>
    <string name="version_">1.0</string>
    <string name="add_type">添加类别</string>
    <string name="statis">统计</string>
    <string name="time">%1$d年%2$d月%3$d日</string>
</resources>
