<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title"
        style="@style/title_bg_style">

        <ImageView
            android:id="@+id/type_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/title_back_selector"/>

        <TextView
            style="@style/title_text_style"
            android:layout_centerInParent="true"
            android:text="@string/statis"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/search_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_type_income_btn"
            style="@style/type_btn"
            android:background="@drawable/search_type_left_bg_press"
            android:text="@string/type_income"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/add_type_cost_btn"
            style="@style/type_btn"
            android:background="@drawable/search_type_center_bg"
            android:text="@string/type_cost"
            android:textColor="@color/my_color"/>

        <TextView
            android:id="@+id/add_type_all_btn"
            style="@style/type_btn"
            android:background="@drawable/search_type_bg"
            android:text="@string/all"
            android:textColor="@color/my_color"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/search_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="开始"/>

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="哈哈"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="至"/>

        <TextView
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="加快了分解"
            android:textSize="18sp"/>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/staticsRecycleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/time"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"/>
</RelativeLayout>
