<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.account.king.SearchActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/my_color">

        <ImageView
            android:id="@+id/title_left_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/title_back"
            android:visibility="visible"/>

        <TextView
            style="@style/title_text_style"
            android:layout_centerInParent="true"
            android:text="@string/search"/>

        <ImageView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_done_selector"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_type_income_btn"
            style="@style/type_btn"
            android:background="@drawable/search_type_left_bg_press"
            android:text="@string/type_income"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/add_type_cost_btn"
            style="@style/type_btn"
            android:background="@drawable/search_type_bg"
            android:text="@string/type_cost"
            android:textColor="@color/my_color"/>

    </LinearLayout>


</RelativeLayout>
