<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/my_color">

        <ImageView
            android:id="@+id/title_left_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/title_back"
            android:visibility="visible"/>

        <TextView
            style="@style/title_text_style"
            android:layout_centerInParent="true"
            android:text="@string/mine_set"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:background="@color/my_color_80">

        <RelativeLayout
            android:id="@+id/lock_rela"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/rectangle_single_selector">

            <TextView
                style="@style/rectangle_left_text"
                android:text="@string/lock"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_lock"
                style="@style/rectangle_right"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:checked="false"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lock_edit"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lock_rela"
            android:layout_marginTop="9dp"
            android:background="@drawable/rectangle_single_selector"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/mine_set"
                android:textColor="@color/my_color"
                android:textSize="@dimen/common_textSize"/>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_calendar_right_arrow"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/remind_rela"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_below="@+id/lock_edit"
            android:layout_marginTop="9dp"
            android:background="@drawable/rectangle_single_selector">

            <TextView
                style="@style/rectangle_left_text"
                android:text="@string/remind_writer"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_remind"
                style="@style/rectangle_right"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:checked="false"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/remind_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/remind_rela"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/remind_date"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lock_rela"
                android:layout_marginTop="9dp"
                android:background="@drawable/rectangle_single_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/remind_date"
                    android:textColor="@color/my_color"
                    android:textSize="@dimen/common_textSize"/>

                <ImageView
                    android:id="@+id/remind_right_arrow"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_calendar_right_arrow"/>

                <TextView
                    android:id="@+id/remind_text"
                    style="@style/rectangle_right_text"
                    android:layout_toLeftOf="@id/remind_right_arrow"
                    android:text="@string/remind_date_value"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/repeat"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lock_rela"
                android:background="@drawable/rectangle_single_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/repeat_cycle"
                    android:textColor="@color/my_color"
                    android:textSize="@dimen/common_textSize"/>

                <ImageView
                    android:id="@+id/repeat_right_arrow"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/ic_calendar_right_arrow"/>

                <TextView
                    android:id="@+id/repeat_text"
                    style="@style/rectangle_right_text"
                    android:layout_toLeftOf="@id/repeat_right_arrow"
                    android:text="@string/repeat_cycle_value"/>
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>